syntax = "proto3";
package gateway.solo.io;
option go_package = "github.com/solo-io/gloo/projects/gateway/pkg/api/v1";

import "gogoproto/gogo.proto";
option (gogoproto.equal_all) = true;

import "github.com/solo-io/solo-kit/api/v1/metadata.proto";
import "github.com/solo-io/solo-kit/api/v1/status.proto";
import "github.com/solo-io/solo-kit/api/v1/solo-kit.proto";

import "github.com/solo-io/gloo/projects/gateway/api/v1/virtual_service.proto";

/*
*
* The **RouteTable** is a child Routing object for the Gloo Gateway.
*
* A **RouteTable** must always be referenced by a `delegateAction`, either
* in a parent VirtualService or another RouteTable.
*
* The routes specified in route tables will have their paths prefixed by the prefixes of the
* parent routes which delegate to them.
*
* For example, the following (abridged) configuration:
*
* ```
* virtualService: mydomain.com
* match: /a
* delegate: a-routes
* ---
* routeTable: a-routes
* match: /1
* delegate: 1-routes
* match: /2
* delegate: 2-routes
* ---
* routeTable: 1-routes
* match: /foo
* destination: foo-svc
* match: /bar
* destination: bar-svc
* ----
* routeTable: 2-routes
* match: /baz
* destination: baz-svc
* match: /qux
* destination: qux-svc
*
* ```
*
* Would produce the following route config for `mydomain.com`:
*
* ```
* /a/1/foo -> foo-svc
* /a/1/bar -> bar-svc
* /a/2/baz -> baz-svc
* /a/2/qux -> qux-svc
*
* ```
*
* Only **VirtualServices** will be loaded by Gloo. If a **RouteTable** or its parents are not
* referenced within a **VirtualService**, it will be ignored.
*
*/
message RouteTable {

    option (core.solo.io.resource).short_name = "rt";
    option (core.solo.io.resource).plural_name = "route_tables";

    // the list of routes for the route table
    repeated Route routes = 1;

    // Status indicates the validation status of this resource.
    // Status is read-only by clients, and set by gloo during validation
    core.solo.io.Status status = 6 [(gogoproto.nullable) = false, (gogoproto.moretags) = "testdiff:\"ignore\""];

    // Metadata contains the object metadata for this resource
    core.solo.io.Metadata metadata = 7 [(gogoproto.nullable) = false];
}

